# compute-renderer

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: release.yml
assets/: McLaren F1 1993 NFS2 Edition by Alex.Ka..mtl
src/: camera.rs  clear_pass.rs  effect.rs  fragment_pass.rs  gpu.rs  main.rs  model.rs  performance.rs  raster_pass.rs  scene.rs  util.rs  vertex.rs  vertex_pass.rs  window.rs
src/custom_pipeline/: binning_pass.rs  clear_pass.rs  fragment_pass.rs  gpu.rs  gpu_buffers.rs  mod.rs  present_pass.rs  raster_pass.rs  render_pass.rs  renderer.rs  util.rs  vertex_pass.rs
src/custom_pipeline/shaders/: binning.wgsl  clear.wgsl  fragment.wgsl  present.wgsl  rasteriser.wgsl  vertex.wgsl
src/gpu/: binning_pass.rs  clear_pass.rs  fragment_pass.rs  gpu.rs  gpu_buffers.rs  mod.rs  raster_pass.rs  util.rs  vertex_pass.rs
src/gpu/shaders/: binning.wgsl  clear.wgsl  fragment.wgsl  rasteriser.wgsl  vertex.wgsl
src/shaders/: clear.wgsl  fragment.wgsl  raster.wgsl  rasteriser.wgsl  vertex.wgsl
src/wgpu_pipeline/: renderer.rs  shaders.wgsl
