[package]
name = "compute-renderer"
version = "0.1.0"
edition = "2021"

[dependencies]
wgpu = "23.0.1"
pollster = "0.4.0"
bytemuck = { version = "1.20.1", features = ["derive"] }
glam = "0.29.2"
futures-intrusive = "0.5.0"
image = "0.25.5"
tobj = "4.0.2"
sysinfo = "0.33.1"
winit = "0.29.10"
pixels = { version = "0.15.0" }
egui = "0.30.0"
egui-wgpu = "0.30.0"
egui-winit = "0.30.0"
