[package]
name = "compute-renderer"
version = "0.1.0"
edition = "2021"

[dependencies]
wgpu = "24.0.1"
pollster = "0.4.0"
bytemuck = { version = "1.21.0", features = ["derive"] }
glam = "0.30.0"
futures-intrusive = "0.5.0"
tobj = "4.0.3"
sysinfo = "0.33.1"
winit = "0.30.9"
pixels = { version = "0.15.0" }
